fix : Fixed the alignment of the Login Form

--- a/blazortest/wwwroot/css/app.css
+++ b/blazortest/wwwroot/css/app.css
@@ -116,10 +116,9 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4); /* Soft pastel gradient */
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
 }
-
-.login-form {
+.login-container .login-form {
   border-radius: 14px;
   display: flex;
   justify-content: center;
@@ -127,21 +126,18 @@ body {
   width: 100%;
   max-width: 400px;
 }
-
-.login-card {
+.login-container .login-form .login-card {
   width: 100%;
   padding: 2rem;
   border-radius: 16px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
-
-.login-logo {
+.login-container .login-form .login-card .login-logo {
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
 }
-
-.login-logo-image {
+.login-container .login-form .login-card .login-logo .login-logo-image {
   width: 80px;
   height: 80px;
   border-radius: 50%;
